Bug 1272757 - Fix drag handling so that drag inputs don't get stuck waiting for content response while running tests. r=rbarker, a=sylvestre

MozReview-Commit-ID: Lsn5nFNcP7k